--- a/wiki/DecodingExamples.wiki
+++ b/wiki/DecodingExamples.wiki
@@ -337,7 +337,7 @@ Main logic:
     value = transformer.getResult();
 }}}
 
-The result is similar to the one return from the code:
+The result is similar toone return from the following codec:
 {{{
     String jsonString = <Input JSON text>;
     Object value = null;
