Edited wiki page through web user interface.

--- a/wiki/JSPAndAJAXExamples.wiki
+++ b/wiki/JSPAndAJAXExamples.wiki
@@ -2,6 +2,7 @@
 <wiki:toc/>
 
 ====Example 1 - Server side JSP encoding ====
+service.jsp:
 {{{
   <%@page contentType="text/html; charset=UTF-8"%>
   <%@page import="org.json.simple.JSONObject"%>
