Edited wiki page through web user interface.

--- a/wiki/JSPAndAJAXExamples.wiki
+++ b/wiki/JSPAndAJAXExamples.wiki
@@ -19,3 +19,50 @@ service.jsp:
 }}}
 
 Then the client side will get the resulting JSON text.
+
+====Example 2 - Client side XMLHttpRequest ====
+client.html:
+{{{
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
+<script type="text/javascript">
+function createXMLHttpRequest(){
+  // See http://en.wikipedia.org/wiki/XMLHttpRequest
+  // Provide the XMLHttpRequest class for IE 5.x-6.x:
+  if( typeof XMLHttpRequest == "undefined" ) XMLHttpRequest = function() {
+    try { return new ActiveXObject("Msxml2.XMLHTTP.6.0") } catch(e) {}
+    try { return new ActiveXObject("Msxml2.XMLHTTP.3.0") } catch(e) {}
+    try { return new ActiveXObject("Msxml2.XMLHTTP") } catch(e) {}
+    try { return new ActiveXObject("Microsoft.XMLHTTP") } catch(e) {}
+    throw new Error( "This browser does not support XMLHttpRequest." )
+  };
+  return new XMLHttpRequest();
+}
+
+var AJAX = createXMLHttpRequest();
+
+function handler() {
+  if(AJAX.readyState == 4 && AJAX.status == 200) {
+      var json = eval('(' + AJAX.responseText +')');
+      alert('Success. Result: name => ' + json.name + ',' + 'balance => ' + json.balance);
+  }else if (AJAX.readyState == 4 && AJAX.status != 200) {
+    alert('Something went wrong...');
+  }
+}
+
+function show(){
+  AJAX.onreadystatechange = handler;
+  AJAX.open("GET", "service.jsp");
+  AJAX.send("");
+};
+</script>
+
+<body>
+  <a href="#" onclick="javascript:show();"> Click here to get JSON data from the server side</a>
+</html>
+}}}
+
+Place client.html and service.jsp (see [#Example_1_-_Server_side_JSP_encoding Example 1]) in the same directory and then open client.html in IE or Firefox, click the link and you'll get result.
