--- a/wiki/MappingBetweenJSONAndJavaEntities.wiki
+++ b/wiki/MappingBetweenJSONAndJavaEntities.wiki
@@ -8,4 +8,4 @@
 || array || java.util.List ||
 || object || java.util.Map ||
 
-JSON.simple maps entities from the left side to the right side while decoding or parsing, and maps entities from the right to the left while encoding. While encoding, other classes that are not listed on the right side of the table need to implement [http://code.google.com/p/json-simple/source/browse/trunk/src/org/json/simple/JSONAware.java JSONAware] or [http://code.google.com/p/json-simple/source/browse/trunk/src/org/json/simple/JSONStreamAware.java JSONStreamAware] to [http://code.google.com/p/json-simple/wiki/EncodingExamples#Example_6-1_-_Customize_JSON_outputs customize] JSON outputs. In such cases, JSON.simple calls JSONAware.toJSONString() or JSONStreamAware.writeJSONString() to determine the resulting JSON text.
+JSON.simple maps entities from the left side to the right side while decoding or parsing, and maps entities from the right to the left while encoding. While decoding, default concrete class of java.util.List is org.json.simple.JSONArray and default concrete class of java.util.Map is org.json.simple.JSONObject. While encoding, other classes that are not listed on the right side of the table need to implement [http://code.google.com/p/json-simple/source/browse/trunk/src/org/json/simple/JSONAware.java JSONAware] or [http://code.google.com/p/json-simple/source/browse/trunk/src/org/json/simple/JSONStreamAware.java JSONStreamAware] to [http://code.google.com/p/json-simple/wiki/EncodingExamples#Example_6-1_-_Customize_JSON_outputs customize] JSON outputs. In such cases, JSON.simple calls JSONAware.toJSONString() or JSONStreamAware.writeJSONString() to determine the resulting JSON text.
