--- a/wiki/EncodingExamples.wiki
+++ b/wiki/EncodingExamples.wiki
@@ -335,4 +335,4 @@
   }}}
   Result: [{"userName":"foo1","ID":123},{"userName":"foo2","ID":124},{"userName":"\"foo2\"","ID":125}]
 
-  Please note that you don't have to implement JSONStreamAware to support streaming output of your bean, you can implement JSONAware instead of JSONStreamAware, and in the latter case, JSONAware.toString() is called and the result is written to the output stream. You can use JSONStreamAware if you need better performance. If a class implements both JSONStreamAware and JSONAware, JSONStreamAware is given precedence. Please refer [MappingBetweenJSONAndJavaEntities Mapping Between JSON and Java Entities] for more information.
+  Please note that you don't have to implement JSONStreamAware to support streaming output of your bean, you can implement JSONAware instead of JSONStreamAware, and in the latter case, JSONAware.toString() is called and the result is written to the output stream. You can use JSONStreamAware if you need better performance. If a class implements both JSONStreamAware and JSONAware, JSONStreamAware is given precedence while streaming. Please refer [MappingBetweenJSONAndJavaEntities Mapping Between JSON and Java Entities] for more information.
